// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyViewerState it renders empty search screen when "viewerStatus" is "empty_search" when sending title and body props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingMedium emotion-euiPanel-grow-m-m-subdued"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasBorder"
          data-test-subj="empty_search_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <figure
                class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
              >
                <img
                  alt=""
                  class="euiImage emotion-euiImage-fullWidth"
                  src="test-file-stub"
                />
              </figure>
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h3
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="empty_search_title"
                >
                  Empty search title
                </h3>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="empty_search_body"
                  >
                    Empty search body
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingMedium emotion-euiPanel-grow-m-m-subdued"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasBorder"
        data-test-subj="empty_search_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <figure
              class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
            >
              <img
                alt=""
                class="euiImage emotion-euiImage-fullWidth"
                src="test-file-stub"
              />
            </figure>
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h3
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="empty_search_title"
              >
                Empty search title
              </h3>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="empty_search_body"
                >
                  Empty search body
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyViewerState it renders empty search screen when "viewerStatus" is "empty_search" with the default title and body 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingMedium emotion-euiPanel-grow-m-m-subdued"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasBorder"
          data-test-subj="empty_search_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <figure
                class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
              >
                <img
                  alt=""
                  class="euiImage emotion-euiImage-fullWidth"
                  src="test-file-stub"
                />
              </figure>
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h3
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="empty_search_title"
                >
                  No results match your search criteria
                </h3>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="empty_search_body"
                  >
                    Try modifying your search
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingMedium emotion-euiPanel-grow-m-m-subdued"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt euiEmptyPrompt--horizontal euiEmptyPrompt--paddingLarge emotion-euiPanel-m-plain-hasBorder"
        data-test-subj="empty_search_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <figure
              class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
            >
              <img
                alt=""
                class="euiImage emotion-euiImage-fullWidth"
                src="test-file-stub"
              />
            </figure>
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h3
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="empty_search_title"
              >
                No results match your search criteria
              </h3>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="empty_search_body"
                >
                  Try modifying your search
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyViewerState it renders error screen when "viewerStatus" is "error" when sending the title and body props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-danger"
          data-test-subj="error_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <span
                color="danger"
                data-euiicon-type="alert"
              />
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h2
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="error_title"
                >
                  Error title
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="error_body"
                  >
                    Error body
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-danger"
        data-test-subj="error_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <span
              color="danger"
              data-euiicon-type="alert"
            />
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h2
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="error_title"
              >
                Error title
              </h2>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="error_body"
                >
                  Error body
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyViewerState it renders error screen when "viewerStatus" is "error" with the default title and body 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-danger"
          data-test-subj="error_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <span
                color="danger"
                data-euiicon-type="alert"
              />
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h2
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="error_title"
                >
                  Unable to load exception items
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="error_body"
                  >
                    There was an error loading the exception items. Contact your administrator for help.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--danger euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-danger"
        data-test-subj="error_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <span
              color="danger"
              data-euiicon-type="alert"
            />
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h2
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="error_title"
              >
                Unable to load exception items
              </h2>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="error_body"
                >
                  There was an error loading the exception items. Contact your administrator for help.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyViewerState it renders loading screen when "viewerStatus" is "loading" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        aria-label="Loading"
        class="euiLoadingContent"
        data-test-subj="loading_viewer_state"
        role="progressbar"
      >
        <span
          class="emotion-euiLoadingContent__singleLine"
        />
        <span
          class="emotion-euiLoadingContent__singleLine"
        />
        <span
          class="emotion-euiLoadingContent__singleLine"
        />
        <span
          class="emotion-euiLoadingContent__singleLine"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      aria-label="Loading"
      class="euiLoadingContent"
      data-test-subj="loading_viewer_state"
      role="progressbar"
    >
      <span
        class="emotion-euiLoadingContent__singleLine"
      />
      <span
        class="emotion-euiLoadingContent__singleLine"
      />
      <span
        class="emotion-euiLoadingContent__singleLine"
      />
      <span
        class="emotion-euiLoadingContent__singleLine"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyViewerState it renders no items screen when "viewerStatus" is "empty" with default title and body props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-subdued"
          data-test-subj="empty_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <span
                color="#343741"
                data-euiicon-type="plusInCircle"
              />
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h2
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="empty_title"
                >
                  Add exceptions to this rule
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="empty_body"
                  >
                    There is no exception in your rule. Create your first rule exception.
                  </p>
                </div>
                <div
                  class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
                />
                <div
                  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="empty_state_button"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButtonContent__icon"
                          color="inherit"
                          data-euiicon-type="plusInCircle"
                        />
                        <span
                          class="euiButton__text"
                        >
                          Create rule exception
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-subdued"
        data-test-subj="empty_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <span
              color="#343741"
              data-euiicon-type="plusInCircle"
            />
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h2
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="empty_title"
              >
                Add exceptions to this rule
              </h2>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="empty_body"
                >
                  There is no exception in your rule. Create your first rule exception.
                </p>
              </div>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--fill"
                    data-test-subj="empty_state_button"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButtonContent__icon"
                        color="inherit"
                        data-euiicon-type="plusInCircle"
                      />
                      <span
                        class="euiButton__text"
                      >
                        Create rule exception
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmptyViewerState it renders no items screen when "viewerStatus" is "empty" with default title and body props and listType endPoint 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
        style="margin: 24px 0px; padding: 24px 0px;"
      >
        <div
          class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-subdued"
          data-test-subj="empty_viewer_state"
        >
          <div
            class="euiEmptyPrompt__main"
          >
            <div
              class="euiEmptyPrompt__icon"
            >
              <span
                color="#343741"
                data-euiicon-type="plusInCircle"
              />
            </div>
            <div
              class="euiEmptyPrompt__content"
            >
              <div
                class="euiEmptyPrompt__contentInner"
              >
                <h2
                  class="euiTitle emotion-euiTitle-m"
                  data-test-subj="empty_title"
                >
                  Add exceptions to this rule
                </h2>
                <div
                  class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
                />
                <div
                  class="euiText emotion-euiText-m-euiTextColor-subdued"
                >
                  <p
                    data-test-subj="empty_body"
                  >
                    There is no exception in your rule. Create your first rule exception.
                  </p>
                </div>
                <div
                  class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
                />
                <div
                  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="empty_state_button"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButtonContent__icon"
                          color="inherit"
                          data-euiicon-type="plusInCircle"
                        />
                        <span
                          class="euiButton__text"
                        >
                          Create endpoint exception
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
      style="margin: 24px 0px; padding: 24px 0px;"
    >
      <div
        class="euiPanel euiPanel--subdued euiEmptyPrompt euiEmptyPrompt--vertical euiEmptyPrompt--paddingLarge emotion-euiPanel-m-subdued"
        data-test-subj="empty_viewer_state"
      >
        <div
          class="euiEmptyPrompt__main"
        >
          <div
            class="euiEmptyPrompt__icon"
          >
            <span
              color="#343741"
              data-euiicon-type="plusInCircle"
            />
          </div>
          <div
            class="euiEmptyPrompt__content"
          >
            <div
              class="euiEmptyPrompt__contentInner"
            >
              <h2
                class="euiTitle emotion-euiTitle-m"
                data-test-subj="empty_title"
              >
                Add exceptions to this rule
              </h2>
              <div
                class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
              />
              <div
                class="euiText emotion-euiText-m-euiTextColor-subdued"
              >
                <p
                  data-test-subj="empty_body"
                >
                  There is no exception in your rule. Create your first rule exception.
                </p>
              </div>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive euiEmptyPrompt__actions"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--fill"
                    data-test-subj="empty_state_button"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButtonContent__icon"
                        color="inherit"
                        data-euiicon-type="plusInCircle"
                      />
                      <span
                        class="euiButton__text"
                      >
                        Create endpoint exception
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
